samples/_failures_safe/1761539502_f82a73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f014ae3a.c: In function ‘main’:
./samples/SAFE/__tmp_f014ae3a.c:149:12: error: missing terminating " character
  149 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_f014ae3a.c:149:5: error: expected expression at end of input
  149 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_f014ae3a.c:149:5: error: expected declaration or statement at end of input
